--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,17 @@
 {
     "name": "Desktop Notifications for Stack Exchange",
     "description": "Real-time desktop notifications for the Stack Exchange.",
-    "version": "1.1",
+    "version": "1.2",
     "manifest_version": 2,
     "background": {
         "scripts": ["using-websocket.js"]
     },
     "options_page": "options.html",
+    "optional_permissions": [
+        "background"
+    ],
     "permissions": [
-        "notifications"
+        "notifications",
+        "tabs"
     ]
 }
