--- a/Chrome/manifest.json
+++ b/Chrome/manifest.json
@@ -1,16 +1,26 @@
 {
     "name": "Desktop Notifications for Stack Exchange",
     "description": "Real-time desktop notifications for the Stack Exchange.",
-    "version": "1.5.3",
+    "version": "1.6",
     "manifest_version": 2,
     "background": {
-        "scripts": ["using-websocket.js"]
+        "scripts": [
+            "stackexchange-inbox-api.js",
+            "stackexchange-inbox-api-chrome.js",
+            "using-websocket.js"
+        ]
     },
+    "content_scripts": [{
+        "matches": ["https://stackexchange.com/oauth/login_success?robw&*"],
+        "run_at": "document_start",
+        "js": ["login_success.js"]
+    }],
     "options_page": "options.html",
     "optional_permissions": [
         "background"
     ],
     "permissions": [
+        "https://api.stackexchange.com/2.1/inbox*",
         "notifications",
         "tabs"
     ]
