Add fallback to chrome.notifications
In case webkitNotifications gets dropped in the future

--- a/Chrome/manifest.json
+++ b/Chrome/manifest.json
@@ -23,5 +23,8 @@
         "https://api.stackexchange.com/2.1/inbox*",
         "notifications",
         "tabs"
+    ],
+    "web_accessible_resources": [
+        "icon.png"
     ]
 }
