Migrate from cfx to jpm
Also removed Firefox/README.md because most of the info
is already duplicated in the top-level README.md

--- a/Firefox/package.json
+++ b/Firefox/package.json
@@ -5,6 +5,7 @@
     "homepage": "https://stackapps.com/q/3780/9699",
     "version": "1.6.6",
     "fullName": "Desktop notifications for Stack Exchange's inbox",
-    "id": "stackexchange-notifications",
+    "id": "stackexchange-notifications@jetpack",
+    "main": "lib/main",
     "description": "Shows desktop notifications for Stack Exchange's inbox in real-time."
 }
