--- a/Firefox/manifest.json
+++ b/Firefox/manifest.json
@@ -14,7 +14,7 @@
         ]
     },
     "content_scripts": [{
-        "matches": ["https://stackexchange.com/oauth/login_success?robw&*"],
+        "matches": ["https://stackexchange.com/oauth/login_success*"],
         "run_at": "document_end",
         "js": ["login_success.js"]
     }],
@@ -32,7 +32,7 @@
         "128": "icon.png"
     },
     "permissions": [
-        "https://api.stackexchange.com/2.1/inbox*",
+        "https://api.stackexchange.com/*",
         "notifications",
         "storage",
         "tabs"
