--- a/Chrome/manifest.json
+++ b/Chrome/manifest.json
@@ -24,6 +24,7 @@
         "background"
     ],
     "browser_action": {
+        "default_popup": "inbox.html",
         "default_icon": {
             "19": "icon19.png",
             "38": "icon38.png"
