Remove direct access to background page from options page
In Firefox, the background page and options page may have different
private browsing modes, which prevents them from having direct access to
each other.

This patch removes the direct access, and uses asynchronous messaging to
exchange control messages between the background page and the options
page, which ensures that the options page always works, regardless of
private browsing mode.

--- a/Firefox/manifest.json
+++ b/Firefox/manifest.json
@@ -10,7 +10,8 @@
             "localStorage-proxy.js",
             "stackexchange-inbox-api.js",
             "stackexchange-inbox-api-chrome.js",
-            "using-websocket.js"
+            "using-websocket.js",
+            "bridge.js"
         ]
     },
     "content_scripts": [{
